# pf2

./: .document  .gitattributes  .gitignore  .gitmodules  .rdoc_options  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  THIRD_PARTY_LICENSES.txt  pf2.gemspec
.github/workflows/: gh-pages.yaml  release.yaml  test.yaml
crates/backtrace-sys2/: Cargo.toml  build.rs
doc/: development.md
examples/: mandelbrot.rb  mandelbrot_ractor.rb  profile_flat.rb  profile_heavy.rb
exe/: pf2
ext/pf2/: Cargo.toml  backtrace_state.h  build.rs  configuration.c  configuration.h  debug.h  extconf.rb  indexed_maps.h  pf2.c  ringbuffer.c  ringbuffer.h  ruby.c  sample.c  sample.h  sampler.c  sampler.h  serializer.c  serializer.h  session.c  session.h
ext/pf2/src/: backtrace.rs  lib.rs  marker.rs  profile.rs  profile_serializer.rs  ringbuffer.rs  ruby_c_api_helper.c  ruby_init.rs  ruby_internal.rs  ruby_internal_apis.rs  sample.rs  sample_collector.rs  scheduler.rs  serialization.rs  session.rs  siginfo_t.c  signal_scheduler.rs  signal_scheduler_unsupported_platform.rs  timer_collector.rs  timer_thread_scheduler.rs  util.rs
ext/pf2/src/serialization/: profile.rs  serializer.rs
ext/pf2/src/session/: configuration.rs  new_thread_watcher.rs  ruby_object.rs
ext/pf2/src/signal_scheduler/: configuration.rs  profile.rs  timer_installer.rs
ext/pf2c/: backtrace_state.c  pf2.c  (+12 more)
lib/: pf2.rb
test/: add_test.rb  cli_test.rb  depth_truncation_test.rb  e2e_test.rb  pf2_test.rb  profile.proto.rb  profiling_test.rb  script_completion_test.rb  session_test.rb  test_helper.rb
(+25 files in other folders)
