[package]
name = "pf2"
version = "0.1.0"
edition = "2021"
authors = ["Daisuke Aritomo <osyoyu@osyoyu.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
backtrace-sys2 = { path = "../../crates/backtrace-sys2" }
env_logger = { version = "0.11.0", optional = true }
libc = "0.2.149"
log = "0.4.20"
rb-sys = { version = "0.9.105", features = ["stable-api"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"

[build-dependencies]
cc = "1.0.83"

[features]
debug = ["env_logger"]
